# ai-news

./: .gitignore  AGENTS.md  ENTITY_EXTRACTION_USAGE.py  PRD.md  README.md  advanced_search.py  ai-news  collect_news.sh  config.json  debug_keyword_failures.py  demo_keyword_verification.py  demonstrate_entity_extraction.py  enhanced_cli_standalone.py  enhanced_comprehensive_search.py  enhanced_multi_keyword_collector.py  enhanced_multi_keyword_demo.py  generate_digests.sh  init_database.py  prove_multi_keyword_digests.py  pyproject.toml  quick-ai-news.py  setup_spacy.py  show-today-news.py  standalone-demo.py  tag_all_articles.py  validate_readme.py
config/: domain_keywords.json
digests/: topic_digest_20251209_002538.md
docs/: usage.md
examples/: sample_analysis.py  spacy_topic_digest_demo.py  websearch_examples.sh
examples/cli/: uk_ai_insurance.py
examples/entities/: quick_demo.py
examples/interactive/: main_demo.py
examples/keywords/: analysis.py  enhanced_collector.py
examples/performance/: comparison.py
examples/search/: comprehensive_search.py  demo.py  flexible.py
examples/topics/: arbitrary_collector.py  demo_cli_intersection.py  demo_intersection_collection.py  intersection_collector.py  on_the_fly_demo.py  simple_arbitrary.py
reports/coverage/: class_index.html  function_index.html  index.html  z_09535887538a678e___init___py.html  z_09535887538a678e_cli_py.html  z_09535887538a678e_collector_py.html  z_09535887538a678e_config_py.html  z_09535887538a678e_database_py.html  z_09535887538a678e_entity_extractor_py.html  z_09535887538a678e_intelligence_db_py.html  z_09535887538a678e_markdown_generator_py.html  z_09535887538a678e_migrations_py.html  z_09535887538a678e_nlp_pipeline_py.html  z_09535887538a678e_search_collector_py.html  z_09535887538a678e_text_processor_py.html
scripts/: migrate_to_regions.py
scripts/analysis/: content_sources.py  evaluate_and_rank_quality.py  evaluate_digest_quality.py
scripts/database/: analyze_schema.py
scripts/debug/: keyword_failures.py
scripts/demos/: run_demo.sh
scripts/migrations/: deduplicate_bing_articles.py
src/ai_news/: __init__.py  (+34 more)
tests/: test_config_schedule.py  test_domain_term_filter.py  test_schedule_integration.py  test_spacy_term_extractor.py  test_topic_discovery_integration.py
(+3 files in other folders)
