[project]
name = "ai-news"
version = "0.1.0"
description = "Simple AI news collector and feeder"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    # NLP and text processing
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "textblob>=0.17.1",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "regex>=2023.0.0",
    "langdetect>=1.0.9",
    # Security dependencies
    "defusedxml>=0.7.1",
    "bleach>=6.0.0",
    # Caching and performance
    "diskcache>=5.6.0",
    "tqdm>=4.66.0",
    "psutil>=7.1.3",
    "typer>=0.20.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[nlp]
# Additional NLP models and resources
en-core-web-md = "3.7.0"

[project.scripts]
ai-news = "ai_news.cli:main"
ai-daily = "ai_news.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
